--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es6",
+    "lib": ["es6"],
     "sourceMap": false,
     "outDir": "./dist",
     "rootDir": "./lib",
